--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labtest2_mad_6135_2",
+  "name": "sample_warehouse",
   "version": "1.0.0",
   "description": "this is for study purpose",
   "main": "index.js",
